@@ -3,3 +3,15 @@ Simple JavaFX game
 
 To run the game, make sure that you have the JavaFX platform installed.
 Also you need to change the path to files in code.
+
+Linux/Mac: "/pathTo/Image.png"
+Windows: "\\pathTo\\Image.png"
+
+
+VM options:
+Linux/Mac: --module-path /path/to/javafx-sdk-<version>/lib --add-modules javafx.controls,javafx.fxml
+Windows: --module-path "\path\to\javafx-sdk-<version>\lib" --add-modules javafx.controls,javafx.fxml
+  
+No program arguments;
+  
+SDK version 11+;
